# tirex

./: .gitignore  .pre-commit-config.yaml  Dockerfile.cpu  Dockerfile.gpu  README.md  package-lock.json  pyproject.toml  requirements_gpu.yaml  requirements_py24.yaml  requirements_py26.yaml
.github/: sync.yaml
.github/ISSUE_TEMPLATE/: 01-feature_request.yml  02-bug_report.yml
.github/workflows/: benchmark.yaml  cla.yaml  docker-build.yaml  docs.yaml  jupyter.yaml  precommit.yaml  publish.yaml  sync.yaml  test-inference.yaml  test.yaml
benchmark/: Readme.md  benchmark.py  visualize.ipynb
benchmark/result/: tirex-cuda-cuda-uncompiled-h100-2025-11-10.csv  tirex-torch-cpu-h100-2025-11-10.csv  tirex-torch-cpu-macbook-2025-11-10.csv  tirex-torch-cpu-uncompiled-h100-2025-11-10.csv  tirex-torch-cpu-uncompiled-macbook-2025-11-10.csv  tirex-torch-cuda-h100-2025-11-10.csv  tirex-torch-cuda-uncompiled-h100-2025-11-10.csv  tirex-torch-mps-macbook-2025-11-10.csv  tirex-torch-mps-uncompiled-macbook-2025-11-10.csv
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/content/: index.mdx
docs/content/benchmarks/: index.md
docs/content/contributing/: index.md
docs/content/deployment/: index.md
docs/content/getting-started/: install.md  quickstart.md
docs/content/how-to/: anomaly.md  classification.md  evaluation.md
docs/content/how-to/classification/: index.md  practice.md  theory.md  workflow.md
docs/content/how-to/forecasting/: index.md  practice.md  theory.md  workflow.md
docs/content/introduction/: index.mdx
docs/scripts/: generate_api_docs_sphinx.sh
docs/sphinx/source/: conf.py  index.rst  tirex.classification.rst  tirex.rst
docs/src/components/: Badges.tsx
docs/src/css/: custom.css
examples/: quick_start_tirex.ipynb  tirex_onnx.ipynb  util_plot.py
examples/chronos_zs/: chronos_zs.ipynb  requirements.txt
examples/gifteval/: data_fixed_new_numpy.py  gift_eval_utils.py  gifteval.ipynb  requirements.txt
inference/: Dockerfile.cpu  Dockerfile.gpu  README.md  THIRD-PARTY-LICENSES.md  requirements-dev.txt  requirements.txt
inference/app/: config.py  http_server.py  main.py  model.py  mqtt_server.py
inference/tests/: conftest.py  test_http.py  test_mcp.py  test_mqtt.py
src/tirex/: __init__.py  base.py  input_adapter.py
src/tirex/api_adapter/: forecast.py  gluon.py  hf_data.py  standard_adapter.py
src/tirex/models/: components.py  embedding.py  mixed_stack.py  predict_utils.py  tirex.py
src/tirex/models/classification/: __init__.py  embedding.py  linear_classifier.py  rf_classifier.py  trainer.py  utils.py
src/tirex/models/classification/heads/: base_classifier.py  gbm_classifier.py  linear_classifier.py  rf_classifier.py
tests/: test_embedding.py  test_forecast_adapter.py  test_gbm_classifier.py  test_linear_classifier.py  test_rf_classifier.py  test_standard_adapter.py
tests/data/: air_passengers_quantiles_ref.pt  loop_seattle_5T_forecast_resampled_ref.csv  loop_seattle_5T_quantiles_ref.pt  loop_seattle_5T_quantiles_resampled_ref.pt
