[project]
name = "tirex"
version = "1.0.0"
authors = [
  { name="Andreas Auer", email="andreas.auer@nx-ai.com" },
]
description = "A pre-trained Time Series Forecasting Model based on xLSTM supporting zero-shot forecasting"
readme = "README.md"
license = {file="LICENSE"}
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["TiRex", "xLSTM", "Time Series", "Zero-shot", "Deep Learning"]

dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "xlstm==2.0.4",
    "einops==0.8.1",
    "ninja==1.13.0",
    "huggingface-hub==0.34.4",
    "lightning==2.5.3",
    "numpy==2.1.2",
    "pandas==2.3.1",
    "tqdm==4.67.1",
    "dacite==1.9.2" 
]

[project.urls]
Repository = "https://github.com/NX-AI/tirex"
Issues = "https://github.com/NX-AI/tirex/issues"

[project.optional-dependencies]
notebooks = ["ipykernel==6.30.1"]
gluonts = ["gluonts==0.16.2"]
hfdataset = ["datasets==3.6.0"]
all = [
    "ipykernel==6.30.1",
    "gluonts==0.16.2",
    "datasets==3.6.0",
]

# build system
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# docformatter
[tool.docformatter]
diff = false
docstring-length = [40, 1000]
in-place = true
pre-summary-newline = true
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
non-cap = ["TiRex", "xLSTM", "sLSTM"]

# ruff
[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "archive",
]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "tirex", "local-folder"]

[tool.ruff.lint.isort.sections]
"tirex" = ["tirex"]
